[gd_scene load_steps=6 format=2]

[ext_resource path="res://_Game/UI/Themes/Fonts/segoeui.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://_Game/Scripts/scr_HUD.gd" type="Script" id=2]
[ext_resource path="res://_Game/UI/Themes/FabLab_Theme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TaskTextBackground" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.745098 )
margin_left = 15.0
margin_top = 10.0
margin_right = 315.0
margin_bottom = 250.0
color = Color( 1, 1, 0.6, 1 )

[node name="TaskText" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 15.0
margin_right = 310.0
margin_bottom = 245.0
theme = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "TaskText"
text = "TaskText"

[node name="DebugText" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -310.0
margin_right = 410.0
margin_bottom = -10.0
rect_clip_content = false
bbcode_enabled = true
bbcode_text = "DebugText"
text = "DebugText"

[node name="HelpText" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -315.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 205.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "HelpText"
text = "HelpText"
